[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/speech/SpeechBubbleContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/CharacterSpeechBubble.gd" type="Script" id=2]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 3, 1.5 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("SpeechBubbleViewportContainer/Viewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_unshaded = true
params_cull_mode = 2
albedo_texture = SubResource( 2 )

[node name="CharacterSpeechBubble" type="Spatial"]
script = ExtResource( 2 )

[node name="SpeechBubbleViewportContainer" type="ViewportContainer" parent="."]
margin_right = 600.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="SpeechBubbleViewportContainer"]
size = Vector2( 600, 300 )
transparent_bg = true
handle_input_locally = false
hdr = false
render_target_update_mode = 3

[node name="SpeechBubbleContainer" parent="SpeechBubbleViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="SpeechBubble" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.03649, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[connection signal="text_finished_displaying" from="SpeechBubbleViewportContainer/Viewport/SpeechBubbleContainer" to="." method="_on_SpeechBubbleContainer_text_finished_displaying"]
